# loxx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: loxx_ci.yml
app/: CMakeLists.txt  loxx.cc  loxx.h  main.cc  token.cc  tokentype.cc  tokentype.h
include/: error.h  loxx.h  scanner.h  token.h  tokentype.h
lib/: CMakeLists.txt  loxx.cc  scanner.cc  shape.cc  token.cc  tokentype.cc
src/: CMakeLists.txt  error.cc  loxx.h  main.cc  token.h
tests/: CMakeLists.txt  scanner_test.cc  token_test.cc
